[package]
name = "fluvio-auth"
version = "0.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/infinyon/fluvio"
description = "Authorization framework for Fluvio"
publish = false


[lib]
name = "fluvio_auth"
path = "src/lib.rs"


[dependencies]
anyhow = { workspace = true }
asn1 = { workspace = true }
async-trait = { workspace = true }
bon = { workspace = true }
futures-util = { workspace = true  }
openssl = { workspace = true, features = ["vendored"]}
serde = { workspace = true, features = ['derive'] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
x509-parser = { workspace = true }

fluvio-controlplane-metadata = { workspace = true  }
fluvio-future = { workspace = true, features = ["net", "openssl_tls"] }
fluvio-protocol = { workspace = true }
fluvio-socket = { workspace = true }
flv-tls-proxy = { workspace = true }

