[package]
name = "fluvio-mv"
edition = "2021"
version = "0.0.0"
authors = ["fluvio.io"]
description = "Fluvio Materialize View"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"
publish = false


[[bin]]
name = "fluvio-spu"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = { workspace = true  }
async-trait = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "env"]}
futures = {workspace = true }
tracing = { workspace = true }

fluvio = { workspace = true }
fluvio-types = { workspace = true, features = ["events"] }
fluvio-future = { workspace = true,features = ["subscriber"] }