[package]
edition = "2021"
name = "fluvio-storage"
version = "0.0.0"
authors = ["fluvio.io"]
description = "Storage for Fluvio platform"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"
publish = false

[[bin]]
name = "storage-cli"
path = "src/bin/cli.rs"
doc = false
required-features = ["cli", "fluvio-future/subscriber"]

[features]
default = ["iterators"]
cli = ["clap", "humantime"]
iterators = []
fixture = []


[[test]]
name = "replication-test"
path = "tests/replica_test.rs"
required-features = ["fixture"]

[dependencies]
anyhow = { workspace = true }
async-lock = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
blocking = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
futures-lite = { workspace = true }
libc = { workspace = true }
pin-utils = { workspace = true }
nix = { workspace = true }
serde = { workspace = true, features = ['derive', 'std'] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

# these are for CLI only
clap = { workspace = true, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
], optional = true }
humantime = { workspace = true, optional = true }

# Fluvio dependencies
fluvio-types = { workspace = true, features = ["events"] }
fluvio-future = { workspace = true, features = ["fs", "mmap", "zero_copy","timer"] }
fluvio-protocol = { workspace = true }
fluvio-controlplane-metadata = { workspace = true }
fluvio-controlplane = { workspace = true }
fluvio-spu-schema = { workspace = true, features = ["file"] }

[dev-dependencies]
fluvio-future = { workspace = true, features = ["fixture"] }
fluvio-socket = { workspace = true, features = ["file"] }
fluvio-protocol = { workspace = true, features = ["fixture"] }
flv-util = { workspace = true, features = ["fixture"] }

[package.metadata.cargo-udeps.ignore]
development = ["fluvio-socket"]
