[workspace]
members = [
    "aggregate",
    "aggregate-sum",
    "aggregate-json",
    "aggregate-average",
    "aggregate-init",
    "aggregate_with_timestamp",
    "filter",
    "filter_init",
    "filter_look_back",
    "filter_look_back_with_timestamps",
    "filter_with_param",
    "filter_odd",
    "filter_json",
    "filter_regex",
    "filter_with_param_v1",
    "filter_hashset",
    "map",
    "map_double",
    "map_json",
    "map_regex",
    "map_with_timestamp",
    "array_map_json_array",
    "array_map_json_array_with_timestamp",
    "array_map_json_object",
    "array_map_json_reddit",
    "filter_map",
]

resolver = "2"

[workspace.dependencies]
regex = "1"
once_cell = "1"
chrono = { version = "0.4.26", default-features = false }
serde = { version = "1", default-features = false}
serde_json = "1"
serde_yaml = "0.9.0"
thiserror = "1"

fluvio-smartmodule = { path = "../../crates/fluvio-smartmodule" }

# lto is need to reduce wasm binary size
[profile.release]
lto = true
strip = "symbols"

[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"

