[package]
name = "window-example"
version = "0.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.26"

fluvio-smartmodule = { path = "../../crates/fluvio-smartmodule" }
