[package]
name = "fluvio-wasm-aggregate-json"
version = "0.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
serde = { workspace = true,  features = ["derive"] }
serde_json = { workspace = true }

fluvio-smartmodule = { workspace = true }