[package]
name = "fluvio-smartmodule-array-map-array-with-timestamp"
version = "0.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
fluvio-smartmodule = { workspace = true }
