[package]
name = "fluvio-wasm-map-json"
version = "0.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
serde = { workspace = true,  features = ["derive"] }
serde_json =  { workspace = true }
serde_yaml = { workspace = true }
fluvio-smartmodule = { workspace = true }
